@@ -1,1 +1,1 @@
-<em class="karrow ktype">{connector}</em>
+<em class="karrow ktype">{connector}</em>{returnType}
